fix: page flip flickering issue

--- a/frontend/src/styles/Book.module.scss
+++ b/frontend/src/styles/Book.module.scss
@@ -28,9 +28,6 @@
         transform: rotateY(-25deg + $i * 3);
       }
       &:global(.flipped) {
-        &:hover {
-          transform: none;
-        }
         transform: rotateY(-170deg + $i * 3);
         &:hover {
           transform: rotateY(-168deg + $i * 3);
